# pendant2020

./: CMakeLists.txt  README.md  bootloader.cpp  bootloader.h  bq25895.cpp  bq25895.h  build_release_all.sh  color.cpp  color.h  leds.cpp  leds.h  model.cpp  model.h  pendant.cpp  pendant.h  printf.cpp  printf.h  sdd1306.cpp  sdd1306.h  snippets.txt  system_time.cpp  system_time.h  timeline.cpp  timeline.h  vector.h
stm32/: .cproject  .mxproject  .project  STM32F401CCUX_FLASH.ld  STM32F401CCUX_FLASH_BOOTLOADED.ld  STM32F401CCUX_FLASH_BOOTLOADER.ld  startup_stm32f401ccux.S  stm32.ioc
stm32/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_exti.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_pwr.c
stm32/Inc/: ffconf.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usbd_conf.h
stm32/Src/: emfat.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c  usb_device.c  usbd_conf.c  usbd_desc.c  usbd_storage_if.c
